solved css overflow problem

--- a/assets/codes/css/scrollmagic.css
+++ b/assets/codes/css/scrollmagic.css
@@ -1,5 +1,7 @@
 /****** SCROLL ANIMATIONS *****/
-
+#typography, #reminder, #manageP, #retire{
+  overflow-x: hidden !important;
+}
 /* REDEFINE */
 #redefine{
   position: relative;
@@ -9,24 +11,25 @@
 }
 
 /* TYPOGRAPHY / MANAGE PENSION / REMINDER / Retire / PERSONALIZE / RETIREMENT*/
-#typography1, #manageP1, #manageP3, #reminder1, #retire1, #retire3, #personalize1, #rCalculator1, #rCalculator3 {
+#typography1, #manageP1, #manageP3, #reminder1, #retire1, #retire3, #rCalculator1, #rCalculator3{
   opacity: 0;
   left: -150px;
   transition: all .7s;
 }
-#typography2, #manageP2, #reminder2, #retire2, #personalize2, #rCalculator2{
+#typography2,  #rCalculator2, #reminder2, #manageP2, #retire2{
+  overflow-x: hidden !important;
   opacity: 0;
   right:-150px;
   transition: all 1s;
 }
 
 /* USER EXPERIENCE */
-#ux1, #project2{
+#ux1, #project2, #personalize1{
   opacity: 0;
   top:-150px;
   transition: all 1s;
 }
-#ux2,#project1{
+#ux2,#project1,#personalize2{
   opacity: 0;
   bottom:-150px;
   transition: all 1s;
