--- a/assets/codes/css/style.css
+++ b/assets/codes/css/style.css
@@ -1,5 +1,5 @@
 body{
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   margin-bottom: 80px !important
 }
 
